tests/pass/parsingBoth/normal id.mm0
--identifier ::= [a-zA-Z_][a-zA-Z0-9_]*
sort _I_4M_an_1d;
