tests/fail/parsingBoth/dollar in inner formula2.mm0
--Inside a math string $ cannot appear : math-string ::= '$' [^\$]* '$'
delimiter $ a $ b $  $  $ ;
